@@ -1,4 +1,5 @@
 * #1953: Retrieve friends' nicks from the profile. (tomeu)
+* #1720: Show the owner's buddy menu in the Groups view. (tomeu)
 
 Snapshot aa6a024368
 
